added nav active class and footer links, changed quote, created pages folder, fixed contact links, created success.html and js

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ a {
   text-decoration: none;
 }
 
+.active {
+  border-bottom: 1px solid rgb(66, 20, 109);
+}
+
 .name {
   font-size: large;
   font-weight: bold;
@@ -70,4 +74,14 @@ section {
   background-color: rgb(184, 133, 67);
   padding: 10px;
   margin: 2em auto;
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+li {
+  list-style: none;
 }
